[package]
name = "rust-ping-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rand = "0.8.4"
lazy_static = "1.4.0"
uuid = "0.8.2"
serde = "1.0.126"
